--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -1189,29 +1189,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "## Day 21\n",
-        "###Container With Most Water\n",
-        "You are given an integer array height of length n. There are n vertical lines drawn such that the two endpoints of the ith line are (i, 0) and (i, height[i]).\n",
-        "\n",
-        "Find two lines that together with the x-axis form a container, such that the container contains the most water.\n",
-        "\n",
-        "Return the maximum amount of water a container can store.\n",
-        "\n",
-        "Notice that you may not slant the container.\n",
-        "\n",
-        "Constraints:\n",
-        "\n",
-        "- n == height.length\n",
-        "- 2 <= n <= 105\n",
-        "- 0 <= height[i] <= 104"
-      ],
-      "metadata": {
-        "id": "OBvaT36UCYoE"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "#Day 21\n",
@@ -1246,6 +1223,45 @@
           "text": [
             "enter list2: 1 8 6 2 5 4 8 3 7\n",
             "49\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Day 21\n",
+        "class Solution(object):\n",
+        "  def maxArea(self, height):\n",
+        "    i=0\n",
+        "    j=len(height)-1\n",
+        "    most_water=0\n",
+        "    while i<j:\n",
+        "      most_water = max(most_water, (j-i)*min(height[i],height[j]))\n",
+        "      if height[i]<height[j]:\n",
+        "        i+=1\n",
+        "      else:\n",
+        "        j+=1\n",
+        "      return most_water\n",
+        "h = list(map(int,input('Enter list: ').split()))\n",
+        "solution = Solution()\n",
+        "print(solution.maxArea(h))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YeHYKjZGWAXp",
+        "outputId": "84fb7878-ec27-475f-c9ac-70f9724596f7"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter list: 1 8 6 2 5 4 8 3 7\n",
+            "8\n"
           ]
         }
       ]
@@ -1313,45 +1329,6 @@
           "text": [
             "Enter input: ()))()())\n",
             "4\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Day 21\n",
-        "class Solution(object):\n",
-        "    def maxArea(self, height):\n",
-        "        i=0\n",
-        "        j=len(height)-1\n",
-        "        most_water = 0\n",
-        "        while i<j:\n",
-        "            most_water = max(most_water, (j-i)*min(height[i],height[j]))\n",
-        "            if height[i]<height[j]:\n",
-        "                i+=1\n",
-        "            else:\n",
-        "                j-=1\n",
-        "        return most_water\n",
-        "h = list(map(int,input(\"enter list2: \").split()))\n",
-        "solution=Solution()\n",
-        "print(solution.maxArea(h))"
-      ],
-      "metadata": {
-        "id": "IwKXla2XV03F",
-        "outputId": "536940c3-333b-49a0-ed5e-b1f9f878ee2d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "enter list2: 1 8 6 2 5 4 8 3 7\n",
-            "49\n"
           ]
         }
       ]
