--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -1238,7 +1238,7 @@
         "id": "4ilIATCHVgdS",
         "outputId": "1bec1f0a-437f-43b2-d405-7a6bb7a51d8f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1305,7 +1305,7 @@
         "id": "TxtMeVYgUMqv",
         "outputId": "82d1e675-6818-491a-cc8f-8b8421ad83bc"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1313,6 +1313,29 @@
           "text": [
             "Enter input: ()))()())\n",
             "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"test\")"
+      ],
+      "metadata": {
+        "id": "nlcvO0REaIfS",
+        "outputId": "7d2968c5-486c-41ea-b8ec-f29f40a8887f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "test\n"
           ]
         }
       ]
