--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -1320,14 +1320,52 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"test\")"
+        "class Solution(object):\n",
+        "    def maxArea(self, height):\n",
+        "        i=0\n",
+        "        j=len(height)-1\n",
+        "        most_water = 0\n",
+        "        while i<j:\n",
+        "            most_water = max(most_water, (j-i)*min(height[i],height[j]))\n",
+        "            if height[i]<height[j]:\n",
+        "                i+=1\n",
+        "            else:\n",
+        "                j-=1\n",
+        "        return most_water\n",
+        "h = list(map(int,input(\"Enter List: \").split()))\n",
+        "solution = Solution()\n",
+        "print(solution.maxArea(h))"
       ],
       "metadata": {
-        "id": "nlcvO0REaIfS",
-        "outputId": "7d2968c5-486c-41ea-b8ec-f29f40a8887f",
+        "id": "8dKBRx7EaQG_",
+        "outputId": "dcaad30f-e466-4ad8-fc70-3f4c1d1e77a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter List: 1 8 6 2 5 4 8 3 7\n",
+            "49\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"test\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nlcvO0REaIfS",
+        "outputId": "7d2968c5-486c-41ea-b8ec-f29f40a8887f"
       },
       "execution_count": 9,
       "outputs": [
