--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -1254,6 +1254,72 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Day 22\n",
+        "###Combination Sum\n",
+        "Given an array of distinct integers candidates and a target integer target, return a list of all unique combinations of candidates where the chosen numbers sum to target. You may return the combinations in any order.\n",
+        "\n",
+        "The same number may be chosen from candidates an unlimited number of times. Two combinations are unique if the frequency of at least one of the chosen numbers is different.\n",
+        "\n",
+        "The test cases are generated such that the number of unique combinations that sum up to target is less than 150 combinations for the given input.\n",
+        "\n",
+        "Constraints:\n",
+        "\n",
+        "- 1 <= candidates.length <= 30\n",
+        "- 2 <= candidates[i] <= 40\n",
+        "- All elements of candidates are distinct.\n",
+        "- 1 <= target <= 40"
+      ],
+      "metadata": {
+        "id": "eoe70YvAm1eW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Day 22\n",
+        "class Solution(object):\n",
+        "    def combinationSum(self, candidates, target):\n",
+        "        result = []\n",
+        "        def backtrack(start, path, remaining):\n",
+        "            if remaining == 0:\n",
+        "                result.append(path[:])\n",
+        "                return\n",
+        "            if remaining < 0:\n",
+        "                return\n",
+        "            for i in range(start, len(candidates)):\n",
+        "                path.append(candidates[i])\n",
+        "                backtrack(i, path, remaining-candidates[i])\n",
+        "                path.pop()\n",
+        "        backtrack(0, [], target)\n",
+        "        return result\n",
+        "l=list(map(int,input('enter list: ').split()))\n",
+        "t=int(input('enter a number: '))\n",
+        "solution = Solution()\n",
+        "print(solution.combinationSum(l,t))"
+      ],
+      "metadata": {
+        "id": "RR14DkHceWwT",
+        "outputId": "375dbd97-f462-4398-f579-1bfab6109658",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter list: 2 3 5\n",
+            "enter a number: 8\n",
+            "[[2, 2, 2, 2], [2, 3, 3], [3, 5]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
