--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -1258,7 +1258,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Day 22\n",
+        "##Day 22 Question 1\n",
         "###Combination Sum\n",
         "Given an array of distinct integers candidates and a target integer target, return a list of all unique combinations of candidates where the chosen numbers sum to target. You may return the combinations in any order.\n",
         "\n",
@@ -1280,7 +1280,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Day 22\n",
+        "#Day 22 question 1\n",
         "class Solution(object):\n",
         "    def combinationSum(self, candidates, target):\n",
         "        result = []\n",
@@ -1317,6 +1317,74 @@
             "enter list: 2 3 5\n",
             "enter a number: 8\n",
             "[[2, 2, 2, 2], [2, 3, 3], [3, 5]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Day 22 Question 2\n",
+        "### Combination Sum II\n",
+        "Given a collection of candidate numbers (candidates) and a target number (target), find all unique combinations in candidates where the candidate numbers sum to target.\n",
+        "\n",
+        "Each number in candidates may only be used once in the combination.\n",
+        "\n",
+        "Note: The solution set must not contain duplicate combinations.\n",
+        "\n",
+        "Constraints:\n",
+        "\n",
+        "- 1 <= candidates.length <= 100\n",
+        "- 1 <= candidates[i] <= 50\n",
+        "- 1 <= target <= 30"
+      ],
+      "metadata": {
+        "id": "DUNVyNOFu0nN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Day 22 question 2\n",
+        "class Solution(object):\n",
+        "    def combinationSum2(self, candidates, target):\n",
+        "        candidates.sort()\n",
+        "        result = []\n",
+        "        def backtrack(start, path, remaining):\n",
+        "            if remaining == 0:\n",
+        "                result.append(path[:])\n",
+        "                return\n",
+        "            if remaining < 0:\n",
+        "                return\n",
+        "            for i in range(start, len(candidates)):\n",
+        "                if i > start and candidates[i] == candidates[i-1]:\n",
+        "                    continue\n",
+        "                path.append(candidates[i])\n",
+        "                backtrack(i+1, path, remaining-candidates[i])\n",
+        "                path.pop()\n",
+        "        backtrack(0,[],target)\n",
+        "        return result\n",
+        "l=list(map(int,input('enter list: ').split()))\n",
+        "t=int(input('enter a number: '))\n",
+        "solution = Solution()\n",
+        "print(solution.combinationSum2(l,t))"
+      ],
+      "metadata": {
+        "id": "Is6CQTaNuwhN",
+        "outputId": "46f97291-2927-4b36-a721-7da229fa0e5f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter list: 10 1 2 7 6 1 5\n",
+            "enter a number: 8\n",
+            "[[1, 1, 6], [1, 2, 5], [1, 7], [2, 6]]\n"
           ]
         }
       ]
