--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -1388,6 +1388,72 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 23\n",
+        "### 3Sum Closest\n",
+        "Given an integer array nums of length n and an integer target, find three integers in nums such that the sum is closest to target.\n",
+        "\n",
+        "Return the sum of the three integers.\n",
+        "\n",
+        "You may assume that each input would have exactly one solution.\n",
+        "\n",
+        "Constraints:\n",
+        "- 3 <= nums.length <= 500\n",
+        "- -1000 <= nums[i] <= 1000\n",
+        "- -104 <= target <= 104"
+      ],
+      "metadata": {
+        "id": "6PwMcimZr944"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Day 23\n",
+        "class Solution(object):\n",
+        "    def threeSumClosest(self, nums, target):\n",
+        "        nums.sort()\n",
+        "        result = nums[0] + nums[1] + nums[2]\n",
+        "        for i in range(len(nums) - 2):\n",
+        "            l, r = i + 1, len(nums) - 1\n",
+        "            while l < r:\n",
+        "                s = nums[i] + nums[l] + nums[r]\n",
+        "                if abs(target - s) < abs(target - result):\n",
+        "                    result = s\n",
+        "                if s < target:\n",
+        "                    l += 1\n",
+        "                elif s > target:\n",
+        "                    r -= 1\n",
+        "                else:\n",
+        "                    return s\n",
+        "        return result\n",
+        "l=list(map(int,input('enter list: ').split()))\n",
+        "t=int(input('enter a number: '))\n",
+        "solution = Solution()\n",
+        "print(solution.threeSumClosest(l,t))"
+      ],
+      "metadata": {
+        "id": "fP7RZKXlrhlc",
+        "outputId": "f18c55c6-8bda-4693-8881-a708ebe8453e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter list: 0 3 97 102 200\n",
+            "enter a number: 300\n",
+            "300\n"
+          ]
+        }
+      ]
     }
   ]
 }
