--- a/Python_Challenges.ipynb
+++ b/Python_Challenges.ipynb
@@ -1442,7 +1442,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1451,6 +1451,111 @@
             "enter list: 0 3 97 102 200\n",
             "enter a number: 300\n",
             "300\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 24 Question 1\n",
+        "###Pascal's Triangle\n",
+        "Given an integer numRows, return the first numRows of Pascal's triangle.\n",
+        "\n",
+        "In Pascal's triangle, each number is the sum of the two numbers directly above it\n",
+        "\n",
+        "Constraints:\n",
+        "\n",
+        "- 1 <= numRows <= 30"
+      ],
+      "metadata": {
+        "id": "hbNTeMLtx29k"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Day 24 Question 1\n",
+        "class Solution(object):\n",
+        "    def generate(self, numRows):\n",
+        "        result = []\n",
+        "        for i in range(numRows):\n",
+        "            row = [1]*(i+1)\n",
+        "            for j in range(1,i):\n",
+        "                row[j] = result[i-1][j-1]+result[i-1][j]\n",
+        "            result.append(row)\n",
+        "        return result\n",
+        "n=int(input('enter a number: '))\n",
+        "solution = Solution()\n",
+        "print(solution.generate(n))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HfGMz4GbxUOi",
+        "outputId": "ce07928a-9f2f-4d66-eca7-d0557f7b1cfd"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter a number: 5\n",
+            "[[1], [1, 1], [1, 2, 1], [1, 3, 3, 1], [1, 4, 6, 4, 1]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 24 Question 2\n",
+        "###Pascal's Triangle II\n",
+        "Given an integer rowIndex, return the rowIndexth (0-indexed) row of the Pascal's triangle.\n",
+        "\n",
+        "In Pascal's triangle, each number is the sum of the two numbers directly above it\n",
+        "\n",
+        "Constraints:\n",
+        "\n",
+        "- 0 <= rowIndex <= 33"
+      ],
+      "metadata": {
+        "id": "7lPxOEImzBcO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Solution(object):\n",
+        "    def getRow(self, rowIndex):\n",
+        "        result = []\n",
+        "        for i in range(rowIndex+1):\n",
+        "            row = [1]*(i+1)\n",
+        "            for j in range(1,i):\n",
+        "                row[j] = result[i-1][j-1]+result[i-1][j]\n",
+        "            result.append(row)\n",
+        "        return result[rowIndex]\n",
+        "r=int(input('enter a number: '))\n",
+        "solution = Solution()\n",
+        "print(solution.getRow(r))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-cbAp4YUy7bh",
+        "outputId": "2d0fd83e-0a79-4821-8b3a-f1e5dc6f320d"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter a number: 6\n",
+            "[1, 6, 15, 20, 15, 6, 1]\n"
           ]
         }
       ]
